--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -37,7 +37,7 @@
         app:layout_constraintBottom_toTopOf="@+id/textView3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button4" />
+        app:layout_constraintTop_toBottomOf="@+id/login_layout_faceBookLogin_button" />
 
     <EditText
         android:id="@+id/login_layout_editText_email"
@@ -94,7 +94,7 @@
         android:background="@drawable/common_google_signin_btn_text_light_normal"
         android:text="@string/textView_GoogleLogin_Text"
         android:textColor="#000000"
-        app:layout_constraintBottom_toTopOf="@+id/button4"
+        app:layout_constraintBottom_toTopOf="@+id/login_layout_faceBookLogin_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
@@ -185,15 +185,14 @@
         app:layout_constraintStart_toEndOf="@+id/divider1"
         app:layout_constraintTop_toTopOf="@+id/divider1" />
 
-    <Button
-        android:id="@+id/button4"
+    <com.facebook.login.widget.LoginButton
+        android:id="@+id/login_layout_faceBookLogin_button"
         android:layout_width="314dp"
         android:layout_height="50dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:background="#375D96"
-        android:text="@string/textView_FaceBookLogin_Text"
-        android:textColor="#ffffff"
+        android:paddingTop="15dp"
+        android:paddingBottom="15dp"
         app:layout_constraintBottom_toTopOf="@+id/view"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
