--- a/app/src/main/res/layout/activity_userinfo.xml
+++ b/app/src/main/res/layout/activity_userinfo.xml
@@ -14,7 +14,6 @@
         android:layout_alignParentTop="true"
         android:background="?attr/colorPrimary"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-        app:layout_constraintBottom_toTopOf="@+id/imageView2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -30,117 +29,143 @@
     </android.support.v7.widget.Toolbar>
 
 
+    <TextView
+        android:id="@+id/userinfo_layout_textView_title4"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="28dp"
+        android:background="@color/titleTextColor1"
+        android:gravity="center"
+        android:text="기증자 등록하기"
+        android:textColor="#FFFFFF"
+        android:textSize="15sp"
+        app:layout_constraintBottom_toTopOf="@+id/addDonor_layout_textView_title"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/userinfo_layout_layout_my_toolbar" />
+
     <EditText
         android:id="@+id/userinfo_layout_text_nickName"
-        android:layout_width="wrap_content"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="13dp"
+        android:gravity="center_horizontal"
         android:hint="@string/userNickName"
         android:inputType="text"
         android:textSize="15sp"
-        app:layout_constraintBottom_toTopOf="@+id/userinfo_layout_basicInfo"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
+        app:layout_constraintTop_toBottomOf="@+id/iv_profile_img" />
 
-
-    <TextView
-        android:id="@+id/userinfo_layout_basicInfo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="28dp"
-        android:text="@string/basicInfo"
-        android:textColor="#000000"
-        app:layout_constraintBottom_toTopOf="@+id/userinfo_layout_text_name"
-        app:layout_constraintStart_toStartOf="@+id/userinfo_layout_text_name"
-        app:layout_constraintTop_toBottomOf="@+id/userinfo_layout_text_nickName" />
 
     <EditText
         android:id="@+id/userinfo_layout_text_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="300dp"
+        android:layout_height="40dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="13dp"
+        android:layout_marginTop="16dp"
         android:background="@drawable/join_edittext_border"
         android:ems="10"
         android:hint="@string/essentialName"
         android:inputType="textEmailAddress"
         android:textSize="15sp"
-        app:layout_constraintBottom_toTopOf="@+id/userinfo_layout_text_age"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintLeft_toLeftOf="@+id/userinfo_layout_basicInfo"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/userinfo_layout_basicInfo" />
+        app:layout_constraintTop_toBottomOf="@+id/textView31" />
+
+    <TextView
+        android:id="@+id/userinfo_layout_basicInfo"
+        android:layout_width="wrap_content"
+        android:layout_height="19dp"
+        android:layout_marginTop="8dp"
+        android:text="@string/basicInfo"
+        android:textColor="#000000"
+        android:textSize="15sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="@+id/userinfo_layout_text_name"
+        app:layout_constraintTop_toBottomOf="@+id/userinfo_layout_text_nickName" />
 
     <EditText
         android:id="@+id/userinfo_layout_text_age"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="300dp"
+        android:layout_height="40dp"
         android:layout_marginStart="-4dp"
-        android:layout_marginTop="48dp"
+        android:layout_marginTop="8dp"
         android:background="@drawable/join_edittext_border"
         android:ems="10"
         android:hint="@string/essentialAge"
         android:inputType="text"
         android:textSize="15sp"
-        app:layout_constraintBottom_toTopOf="@+id/userinfo_layout_text_phoneNumber"
         app:layout_constraintEnd_toEndOf="@+id/userinfo_layout_text_name"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintLeft_toLeftOf="@+id/userinfo_layout_text_name"
         app:layout_constraintStart_toStartOf="@+id/userinfo_layout_text_name"
         app:layout_constraintTop_toBottomOf="@+id/userinfo_layout_text_name" />
 
     <EditText
         android:id="@+id/userinfo_layout_text_phoneNumber"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="300dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="8dp"
+        android:background="@drawable/join_edittext_border"
         android:ems="10"
+        android:hint="@string/userPhoneNumber"
         android:inputType="phone"
         android:textSize="15sp"
-        android:background="@drawable/join_edittext_border"
-        android:layout_marginTop="50dp"
-        android:hint="@string/userPhoneNumber"
-        app:layout_constraintBottom_toTopOf="@+id/userinfo_layout_Button_infoOk_button"
         app:layout_constraintEnd_toEndOf="@+id/userinfo_layout_text_age"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="@+id/userinfo_layout_text_age"
         app:layout_constraintTop_toBottomOf="@+id/userinfo_layout_text_age" />
 
     <Button
         android:id="@+id/userinfo_layout_Button_infoOk_button"
-        android:layout_width="0dp"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="51dp"
-        android:layout_marginLeft="32dp"
-        android:layout_marginRight="32dp"
         android:layout_marginTop="50dp"
         android:background="#EB6A6A"
         android:text="@string/basicInfoOk"
         android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintEnd_toEndOf="@+id/userinfo_layout_text_phoneNumber"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/userinfo_layout_text_phoneNumber"
         app:layout_constraintTop_toBottomOf="@+id/userinfo_layout_text_phoneNumber" />
 
     <ImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/iv_profile_img"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:layout_marginTop="16dp"
-        app:layout_constraintBottom_toTopOf="@+id/userinfo_layout_text_nickName"
-        app:layout_constraintHorizontal_bias="0.5"
+        android:layout_marginTop="20dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/userinfo_layout_layout_my_toolbar"
+        app:layout_constraintTop_toBottomOf="@+id/userinfo_layout_textView_title4"
         app:srcCompat="@drawable/donor_item_donor_img" />
 
+    <TextView
+        android:id="@+id/textView31"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="Donor@gmail.com"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="@+id/userinfo_layout_basicInfo"
+        app:layout_constraintTop_toBottomOf="@+id/userinfo_layout_basicInfo" />
 
+    <Button
+        android:id="@+id/btn_add_img"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:background="@android:drawable/presence_invisible"
+        android:padding="0dp"
+        app:layout_constraintBottom_toBottomOf="@+id/iv_profile_img"
+        app:layout_constraintEnd_toEndOf="@+id/iv_profile_img" />
 
 
 </android.support.constraint.ConstraintLayout>
