--- a/app/src/main/res/layout/activity_userinfo.xml
+++ b/app/src/main/res/layout/activity_userinfo.xml
@@ -75,7 +75,7 @@
         android:textSize="15sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView31" />
+        app:layout_constraintTop_toBottomOf="@+id/userInfo_layout_textView_userEmail" />
 
     <TextView
         android:id="@+id/userinfo_layout_basicInfo"
@@ -149,7 +149,7 @@
         app:srcCompat="@drawable/donor_item_donor_img" />
 
     <TextView
-        android:id="@+id/textView31"
+        android:id="@+id/userInfo_layout_textView_userEmail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
